--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: 1.17
 
       - name: Build
-        run: cmd/main.go
+        run: go build cmd/main.go
 
       - name: Test
         run: go test -v ./...
