--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,10 +18,15 @@ jobs:
           go-version: 1.17
 
       - name: Build
-        run: go build cmd/main.go
+        run: go build -o testgo cmd/main.go
 
       - name: Test
         run: go test -v ./...
+      - name: upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: testgo-artifact
+          path: testgo
 
   verify:
     name: Integrationtest
@@ -37,4 +42,88 @@ jobs:
           go-version: 1.17
 
       - name: Integrationtest
-        run: go test -v test/.
+        run: go test -v test/. -itest=it
+
+  security:
+    name: Securityscan
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v2
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          # we let the report trigger content trigger a failure using the GitHub Security features.
+          args: "-no-fail -fmt sarif -out results.sarif ./..."
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v1
+        with:
+          # Path to SARIF file relative to the root of the repository
+          sarif_file: results.sarif
+
+  docker:
+    name: Docker
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v3
+      - uses: actions/download-artifact@v2
+        with:
+          name: testgo-artifact
+          path: testgo
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ./Dockerfile
+          context: .
+          push: true
+          pull: true
+          tags: ghcr.io/andidroid/testgo:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'ghcr.io/andidroid/testgo:latest'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+          output: 'trivy-results.sarif'
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v1
+        if: always() 
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+  lint:
+    name: Linter
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v3
+      - name: Super-Linter
+        uses: github/super-linter@v4.9.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_ALL_CODEBASE: false
