--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -83,6 +83,9 @@ jobs:
           sarif_file: results.sarif
 
   docker:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
     name: Docker
     runs-on: ubuntu-latest
     needs: build
