--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Build
         run: go build -o testgo cmd/main.go
 
-      - name: Test
-        run: go test -short -v ./...
-      - name: upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: testgo-artifact
-          path: testgo
+      # - name: Test
+      #   run: go test -short -v ./...
+      # - name: upload artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: testgo-artifact
+      #     path: testgo
 
   verify:
     name: Integrationtest
@@ -107,17 +107,17 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          file: ./Dockerfile
+          file: ./routingservice/Dockerfile
           context: .
           push: true
           pull: true
-          tags: ghcr.io/andidroid/testgo:latest
+          tags: ghcr.io/andidroid/testgo/routingservice:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "ghcr.io/andidroid/testgo:latest"
+          image-ref: "ghcr.io/andidroid/testgo/routingservice:latest"
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
