--- a/routingservice/Dockerfile
+++ b/routingservice/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:1.18-alpine AS builder
 WORKDIR /src
 COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o main routingservice/main.go
 
 FROM alpine:latest
 
