--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -92,10 +92,10 @@ jobs:
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
-      - uses: actions/download-artifact@v2
-        with:
-          name: testgo-artifact
-          path: testgo
+      # - uses: actions/download-artifact@v2
+      #   with:
+      #     name: testgo-artifact
+      #     path: testgo
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to GitHub Container Registry
