--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -86,6 +86,7 @@ jobs:
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      packages: write
     name: Docker
     runs-on: ubuntu-latest
     needs: build
@@ -111,13 +112,13 @@ jobs:
           context: .
           push: true
           pull: true
-          tags: ghcr.io/andidroid/testgo:routingservice-latest
+          tags: ghcr.io/andidroid/testgo:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "ghcr.io/andidroid/testgo:routingservice-latest"
+          image-ref: "ghcr.io/andidroid/testgo:latest"
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
