--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -112,13 +112,13 @@ jobs:
           context: .
           push: true
           pull: true
-          tags: ghcr.io/andidroid/testgo:latest
+          tags: ghcr.io/andidroid/testgo/routingservice:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "ghcr.io/andidroid/testgo:latest"
+          image-ref: "ghcr.io/andidroid/testgo/routingservice:latest"
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
