--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -234,7 +234,7 @@ jobs:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       packages: write
-    name: SearchService Docker
+    name: MessagingService Docker
     runs-on: ubuntu-latest
     needs: build
     steps:
