--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -82,7 +82,14 @@ jobs:
           # Path to SARIF file relative to the root of the repository
           sarif_file: results.sarif
 
-  routingservice-docker:
+  docker:
+    strategy:
+      matrix:
+        service:
+          - routingservice
+          - fleetservice
+          - searchservice
+          - messagingservice
     permissions:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
@@ -108,17 +115,20 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          file: ./routingservice/Dockerfile
+          file: ./${{ matrix.service }}/Dockerfile
           context: .
           push: true
           pull: true
-          tags: ghcr.io/andidroid/testgo/routingservice:latest
+          tags: |
+            ghcr.io/andidroid/testgo/${{ matrix.service }}:latest
+            ghcr.io/andidroid/testgo/${{ matrix.service }}:${GITHUB_SHA::7}
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
+        continue-on-error: true
         with:
-          image-ref: "ghcr.io/andidroid/testgo/routingservice:latest"
+          image-ref: "ghcr.io/andidroid/testgo/${{ matrix.service }}:latest"
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
@@ -127,153 +137,7 @@ jobs:
           output: "trivy-results.sarif"
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v1
-        if: always()
-        with:
-          sarif_file: "trivy-results.sarif"
-
-  fleetservice-docker:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      packages: write
-    name: FleetService Docker
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      # - uses: actions/download-artifact@v2
-      #   with:
-      #     name: testgo-artifact
-      #     path: testgo
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ./fleetservice/Dockerfile
-          context: .
-          push: true
-          pull: true
-          tags: ghcr.io/andidroid/testgo/fleetservice:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "ghcr.io/andidroid/testgo/fleetservice:latest"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-          output: "trivy-results.sarif"
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v1
-        if: always()
-        with:
-          sarif_file: "trivy-results.sarif"
-
-  searchservice-docker:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      packages: write
-    name: SearchService Docker
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      # - uses: actions/download-artifact@v2
-      #   with:
-      #     name: testgo-artifact
-      #     path: testgo
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ./searchservice/Dockerfile
-          context: .
-          push: true
-          pull: true
-          tags: ghcr.io/andidroid/testgo/searchservice:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "ghcr.io/andidroid/testgo/searchservice:latest"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-          output: "trivy-results.sarif"
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v1
-        if: always()
-        with:
-          sarif_file: "trivy-results.sarif"
-
-  messagingservice-docker:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      packages: write
-    name: MessagingService Docker
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      # - uses: actions/download-artifact@v2
-      #   with:
-      #     name: testgo-artifact
-      #     path: testgo
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ./messagingservice/Dockerfile
-          context: .
-          push: true
-          pull: true
-          tags: ghcr.io/andidroid/testgo/messagingservice:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "ghcr.io/andidroid/testgo/messagingservice:latest"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-          output: "trivy-results.sarif"
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v1
+        continue-on-error: true
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
