--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -94,7 +94,7 @@ jobs:
       contents: read # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       packages: write
-    name: RoutingService Docker
+    name: Docker
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -121,7 +121,7 @@ jobs:
           pull: true
           tags: |
             ghcr.io/andidroid/testgo/${{ matrix.service }}:latest
-            ghcr.io/andidroid/testgo/${{ matrix.service }}:${GITHUB_SHA::7}
+            ghcr.io/andidroid/testgo/${{ matrix.service }}:${{GITHUB_SHA::7}}
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Run Trivy vulnerability scanner
