--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -154,11 +154,11 @@ jobs:
         run: |
           git clone "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/andidroid/gorouting-gitops.git"
           git checkout "feature/routing"
-          cd gorouting-gitops/charts/${{ matrix.service }} 
+          pwd
+          cd gorouting-gitops
           ls
           echo Update Helm chart values.yaml with new image:tag ${{ matrix.service }}:${{github.sha}}
-          yq -i '.image.tag = "${{github.sha}}"' ./values.yaml
-          cd ../../
+          yq -i '.image.tag = "${{github.sha}}"' ./charts/${{ matrix.service }} /values.yaml
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
           git add .  
