set image tag in gitops repo after build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -155,10 +155,10 @@ jobs:
           git clone "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/andidroid/gorouting-gitops.git"
           git checkout "feature/routing"
           pwd
-          cd gorouting-gitops
+          cd gorouting-gitops/charts/${{ matrix.service }}
           ls
           echo Update Helm chart values.yaml with new image:tag ${{ matrix.service }}:${{github.sha}}
-          yq -i '.image.tag = "${{github.sha}}"' charts/${{ matrix.service }}/values.yaml
+          yq -i '.image.tag = "${{github.sha}}"' values.yaml
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
           git add .  
