set image tag in gitops repo after build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -160,7 +160,7 @@ jobs:
           cd charts/${{ matrix.service }}
           ls
           echo Update Helm chart values.yaml with new image:tag ${{ matrix.service }}:${{github.sha}}
-          yq -i '.image.tag = "${{github.sha}}"' values.yaml
+          yq -i '.image.tag = "${{github.sha}}"' ./values.yaml
           git config --unset-all http.https://github.com/.extraheader
           git config --global user.name github-actions
           git config --global user.email github-actions@github.com
