--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -160,6 +160,7 @@ jobs:
           cd charts/${{ matrix.service }}
           ls
           echo Update Helm chart values.yaml with new image:tag ${{ matrix.service }}:${{github.sha}}
+          set -x
           yq -i '.image.tag = "${{github.sha}}"' ./values.yaml
           git config --unset-all http.https://github.com/.extraheader
           git config --global user.name github-actions
