set image tag in gitops repo after build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -162,8 +162,8 @@ jobs:
           echo Update Helm chart values.yaml with new image:tag ${{ matrix.service }}:${{github.sha}}
           set -x
           yq -i '.image.tag = "${{github.sha}}"' ./values.yaml
-          git config --global user.name ${{ GIT_USER_NAME }}
-          git config --global user.email ${{ GIT_USER_MAIL }}
+          git config --global user.name $GIT_USER_NAME
+          git config --global user.email $GIT_USER_MAIL
           git add .  
           git commit -m "set ${{ matrix.service }} image tag to ${{github.sha}}" 
           git push
