--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -92,7 +92,7 @@ jobs:
           - searchservice
           - messagingservice
     permissions:
-      contents: read # for actions/checkout to fetch code
+      contents: write # for actions/checkout to fetch code
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       packages: write
     name: Docker
