--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -154,6 +154,14 @@ jobs:
       #   with:
       #     cmd: yq -i '.foo.bar = "cool"' 'config.yml'
 
+      - name: Checkout private tools
+        uses: actions/checkout@v3
+        with:
+          repository: andidroid/gorouting-gitops
+          token: ${{ secrets.ANDIDROID_PACKAGES }} # `GH_PAT` is a secret that contains your PAT
+          path: gorouting-gitops
+          ref: feature/routing
+
       - name: Update image tag in Helm git repo
         run: |
           git clone "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/andidroid/gorouting-gitops.git"
@@ -171,7 +179,7 @@ jobs:
           git commit -m "set ${{ matrix.service }} image tag to ${{github.sha}}" 
           git push
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.ANDIDROID_PACKAGES }}
           GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
           GIT_USER_MAIL: ${{ secrets.GIT_USER_MAIL }}
 
