set image tag in gitops repo after build

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -164,6 +164,7 @@ jobs:
 
       - name: Update image tag in Helm git repo
         run: |
+          cd gorouting-gitops
           cd charts/${{ matrix.service }}
           ls
           echo Update Helm chart values.yaml with new image:tag ${{ matrix.service }}:${{github.sha}}
