--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -107,17 +107,17 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          file: ./Dockerfile
+          file: ./routingservice/Dockerfile
           context: .
           push: true
           pull: true
-          tags: ghcr.io/andidroid/testgo:latest
+          tags: ghcr.io/andidroid/testgo/routingservice:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: "ghcr.io/andidroid/testgo:latest"
+          image-ref: "ghcr.io/andidroid/testgo/routingservice:latest"
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
