--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -128,154 +128,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         continue-on-error: true
         with:
-          image-ref: "ghcr.io/andidroid/testgo/routingservice:latest"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-          output: "trivy-results.sarif"
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v2
-        if: always()
-        with:
-          sarif_file: "trivy-results.sarif"
-
-  fleetservice-docker:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      packages: write
-    name: FleetService Docker
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      # - uses: actions/download-artifact@v2
-      #   with:
-      #     name: testgo-artifact
-      #     path: testgo
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ./fleetservice/Dockerfile
-          context: .
-          push: true
-          pull: true
-          tags: ghcr.io/andidroid/testgo/fleetservice:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "ghcr.io/andidroid/testgo/fleetservice:latest"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-          output: "trivy-results.sarif"
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v1
-        if: always()
-        with:
-          sarif_file: "trivy-results.sarif"
-
-  searchservice-docker:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      packages: write
-    name: SearchService Docker
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      # - uses: actions/download-artifact@v2
-      #   with:
-      #     name: testgo-artifact
-      #     path: testgo
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ./searchservice/Dockerfile
-          context: .
-          push: true
-          pull: true
-          tags: ghcr.io/andidroid/testgo/searchservice:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "ghcr.io/andidroid/testgo/searchservice:latest"
-          format: "table"
-          exit-code: "1"
-          ignore-unfixed: true
-          vuln-type: "os,library"
-          severity: "CRITICAL,HIGH"
-          output: "trivy-results.sarif"
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v1
-        if: always()
-        with:
-          sarif_file: "trivy-results.sarif"
-
-  messagingservice-docker:
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      packages: write
-    name: MessagingService Docker
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Git Checkout
-        uses: actions/checkout@v3
-      # - uses: actions/download-artifact@v2
-      #   with:
-      #     name: testgo-artifact
-      #     path: testgo
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ./messagingservice/Dockerfile
-          context: .
-          push: true
-          pull: true
-          tags: ghcr.io/andidroid/testgo/messagingservice:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "ghcr.io/andidroid/testgo/messagingservice:latest"
+          image-ref: "ghcr.io/andidroid/testgo/${{ matrix.service }}:${{github.sha}}"
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
@@ -288,6 +141,32 @@ jobs:
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
+      - name: Install yq 
+        run: |
+          wget https://github.com/mikefarah/yq/releases/download/v4.24.5/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq
+          yq --version
+      # - name: Install yq 
+      #   uses: mikefarah/yq@master
+      #   with:
+      #     cmd: yq -i '.foo.bar = "cool"' 'config.yml'
+
+      - name: Update image tag in Helm git repo 
+        run: | 
+          git clone "https://github-actions:${GITHUB_TOKEN}@github.com/andidroid/gorouting-gitops.git"
+          git checkout "feature/routing"
+          cd gorouting-gitops/charts/${{ matrix.service }} 
+          ls
+          echo Update Helm chart values.yaml with new image tag
+          yq e -i '.image.tag = ${{github.sha}}' ./values.yaml
+          cd ../../
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
+          git add .  
+          git commit -m "set ${{ matrix.service }} image tag to ${{github.sha}}" 
+          git push
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+
 
   lint:
     name: Linter
