--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -101,10 +101,13 @@ jobs:
     steps:
       - name: Git Checkout
         uses: actions/checkout@v3
-      - uses: actions/download-artifact@v3
         with:
-          name: testgo-artifact
-          path: testgo
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
+          fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
+      # - uses: actions/download-artifact@v2
+      #   with:
+      #     name: testgo-artifact
+      #     path: testgo
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
