--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Build
         run: go build -o testgo cmd/main.go
 
-      - name: Test
-        run: go test -short -v ./...
+      # - name: Test
+      #   run: go test -short -v ./...
       - name: upload artifact
         uses: actions/upload-artifact@v3
         with:
