--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -145,6 +145,11 @@ jobs:
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
+# Github Action for yq
+#      - name: Set foobar to cool
+#        uses: mikefarah/yq@master
+#        with:
+#          cmd: yq -i '.foo.bar = "cool"' 'config.yml'
       - name: Install yq
         run: |
           wget https://github.com/mikefarah/yq/releases/download/v4.28.1/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq
@@ -178,6 +183,7 @@ jobs:
           VERSION=$( semver bump prerelease ${{github.sha}} $VERSION)
           yq -i '.version = strenv(VERSION)' Chart.yaml
           yq -i '.appVersion = "${{github.sha}}"' Chart.yaml
+          cat Chart.yaml
           git config --global user.name $GIT_USER_NAME
           git config --global user.email $GIT_USER_MAIL
           git add .  
