--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,10 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     name: Run govulncheck
     steps:
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 'stable'
       - id: govulncheck
         uses: golang/govulncheck-action@v1
         with:
-           go-version-input: 1.20.6
+           # go-version-input: 1.20.6
            go-package: ./...
   build:
     runs-on: ubuntu-latest
