--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,7 +7,7 @@ on:
       - "feature/**"
       - "releases/**"
   workflow_dispatch:
-  pull_request:
+  # pull_request:
 
 jobs:
   govulncheck_job:
